--- a/style.css
+++ b/style.css
@@ -245,6 +245,10 @@ body {
   border-radius: 5px;
 }
 
+.btn-text {
+  white-space: nowrap;
+}
+
 .btn:hover {
   color: red;
 }
@@ -269,6 +273,7 @@ body {
   background-color: white;
   padding: 30px;
   border-radius: 5px;
+  width: 90%;
 }
 
 .modal-header {
@@ -287,6 +292,10 @@ body {
   cursor: pointer;
 } 
 
+.modal > img {
+  width: 100%;
+}
+
 .modal-header svg:hover path {
   opacity: 1;
 } 
@@ -298,4 +307,110 @@ body {
 
 .game-board--active {
   display: flex;
+}
+
+@media (max-width: 600px) {
+  .play-option {
+    width: 100px;
+    height: 100px;
+  }
+
+  .game-board-2 {
+    justify-content: space-between;
+  }
+
+  .game-board-2 .winner {
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    background: radial-gradient(transparent 74px, rgba(245, 245, 245, 0.145) 74px, rgba(245, 245, 245, .145) 40%, rgba(245, 245, 245, .095) 32%, rgba(245, 245, 245, .095) 55%, rgba(245, 245, 245, .055) 50%, rgba(245, 245, 245, .055) 100%);
+  }
+
+  .result {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .result-text {
+    font-size: 30px;
+  }
+
+  .btn {
+    padding: .6rem 2rem;
+  }
+  .btn-text {
+    font-size: 14px;
+  }
+
+  .pick-text {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 450px) {
+  .play-option {
+    width: 80px;
+    height: 80px;
+  }
+
+  .pick-text {
+    white-space: nowrap;
+  }
+  .rules {
+    right: 50%;
+    transform: translateX(50%);
+  }
+
+  .triangle > img {
+    width: 200px;
+    height: 200px;
+    align-self: center;
+  }
+
+  .game-board-2 {
+    justify-content: space-between;
+  }
+
+  .game-board-2 .winner {
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    background: radial-gradient(transparent 64px, rgba(245, 245, 245, 0.145) 64px, rgba(245, 245, 245, .145) 40%, rgba(245, 245, 245, .095) 32%, rgba(245, 245, 245, .095) 55%, rgba(245, 245, 245, .055) 50%, rgba(245, 245, 245, .055) 100%);
+  }
+
+  .result {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .result-text {
+    font-size: 40px;
+  }
+
+  .btn {
+    padding: .8rem 3rem;
+  }
+  .btn-text {
+    font-size: 16px;
+  }
+
+  .title > h1 {
+    font-size: 24px;
+  }
+
+  .title > h1:not(first-child) {
+    margin-top: -8px;
+  }
+
+  .score {
+    padding: 6px 20px;
+  }
+
+  .pick-text {
+    font-size: 18px;
+  }
 }
